refactor: 事件基础设施现代化 + 持久化映射重构 + 死代码清理
事件基础设施升级：
- DomainEvent 接口增加 eventId/occurredOn/aggregateId/version 元数据
- AbstractDomainEventConsumer 模板基类统一幂等/指标/日志/异常处理
- EventMetadata record + EventMetricsService 可观测性埋点
- DlqAnomalyListener DLQ 告警机制
- 9 个消费者压缩为 4 个 application 层消费者

Order 模块重构：
- OrderDataConverter → OrderEntityMapper（MapStruct 风格）
- OrderVOAssembler → query/assembler 包拆分
- 新增 OrderEvent 领域事件基类
- 删除 PaymentInitiationRequestedEvent（合并入 OrderFulfillment）

Product 模块重构：
- 新增 ProductEvent 领域事件基类
- ProductDomainEventListener 领域事件监听
- ViewCountBatchProcessor 批量处理
- 新增 scheduler 定时任务

跨模块清理：
- 删除冗余 assembler/converter 类
- 测试同步更新
- 文档更新（AGENTS.md/README.md/ADR/工程指标.md）