@@ -1,17 +1,16 @@
 package com.cartethyia.easyorange.product.application.query;
 
 import com.cartethyia.easyorange.common.result.PageResult;
+import com.cartethyia.easyorange.product.application.query.assembler.ProductReadModelAssembler;
 import com.cartethyia.easyorange.product.application.query.readmodel.ProductReadModel;
 import com.cartethyia.easyorange.product.application.query.readmodel.SellerReadModel;
-import com.cartethyia.easyorange.product.application.query.assembler.ProductReadModelAssembler;
-import com.cartethyia.easyorange.product.domain.exception.ProductNotFoundException;
 import com.cartethyia.easyorange.product.domain.aggregate.Product;
-import com.cartethyia.easyorange.product.application.query.ProductVO;
+import com.cartethyia.easyorange.product.domain.exception.ProductNotFoundException;
 import com.cartethyia.easyorange.product.domain.port.ProductCachePort;
 import com.cartethyia.easyorange.product.domain.repository.ProductRepository;
 import com.cartethyia.easyorange.product.domain.repository.query.ProductQueryRepository;
+import com.cartethyia.easyorange.product.domain.repository.query.ProductQueryRepository.ProductImageInfo;
 import com.cartethyia.easyorange.product.domain.valueobject.ProductId;
-import com.cartethyia.easyorange.product.domain.valueobject.SellerId;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -20,6 +19,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -33,89 +33,23 @@ public class ProductQueryService {
     private final ProductReadModelAssembler readModelAssembler;
     private final ProductCachePort<ProductVO> productCachePort;
 
-    @Transactional(readOnly = true)
-    public PageResult<ProductVO> listProducts(String keyword, String categoryId, Integer status,
-                                               BigDecimal minPrice, BigDecimal maxPrice,
-                                               Integer conditionLevel, String sort,
-                                               Boolean hasDiscount,
-                                               Integer pageNum, Integer pageSize) {
-        int effectivePageNum = pageNum != null ? pageNum : 1;
-        int effectivePageSize = pageSize != null ? pageSize : 20;
-
-        PageResult<ProductReadModel> page = productQueryRepository.searchProducts(
-                keyword,
-                categoryId,
-                status,
-                minPrice,
-                maxPrice,
-                conditionLevel,
-                sort,
-                hasDiscount,
-                effectivePageNum,
-                effectivePageSize
-        );
-
-        List<String> productIds = page.records().stream()
-                .map(ProductReadModel::id)
-                .collect(Collectors.toList());
-        Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct = productQueryRepository
-                .findImagesByProductIds(productIds).stream()
-                .collect(Collectors.groupingBy(ProductQueryRepository.ProductImageInfo::productId));
-
-        Set<String> sellerIds = page.records().stream()
-                .map(ProductReadModel::sellerId)
-                .filter(id -> id != null)
-                .collect(Collectors.toSet());
-        Map<String, SellerReadModel> sellerMap = sellerIds.isEmpty()
-                ? Map.of()
-                : productQueryRepository.findSellersByIds(sellerIds).stream()
-                        .collect(Collectors.toMap(SellerReadModel::id, s -> s, (a, b) -> a));
-
-        List<ProductVO> vos = page.records().stream()
-                .map(m -> voFromReadModel(m, imagesByProduct, sellerMap))
-                .collect(Collectors.toList());
-
-        return PageResult.of(vos, page.total(), effectivePageNum, effectivePageSize);
-    }
+    // ── Public query API (single → multi → computed → paged) ──
 
     @Transactional(readOnly = true)
-    public PageResult<ProductVO> getMyProducts(String sellerId, Integer status, Integer pageNum, Integer pageSize) {
-        PageResult<ProductReadModel> page = productQueryRepository.findProductsBySellerId(
-                sellerId, status, pageNum, pageSize);
-
-        List<String> productIds = page.records().stream()
-                .map(ProductReadModel::id)
-                .collect(Collectors.toList());
-        Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct = productQueryRepository
-                .findImagesByProductIds(productIds).stream()
-                .collect(Collectors.groupingBy(ProductQueryRepository.ProductImageInfo::productId));
-
-        Set<String> sellerIds = page.records().stream()
-                .map(ProductReadModel::sellerId)
-                .filter(id -> id != null)
-                .collect(Collectors.toSet());
-        Map<String, SellerReadModel> sellerMap = sellerIds.isEmpty()
-                ? Map.of()
-                : productQueryRepository.findSellersByIds(sellerIds).stream()
-                        .collect(Collectors.toMap(SellerReadModel::id, s -> s, (a, b) -> a));
-
-        List<ProductVO> vos = page.records().stream()
-                .map(m -> voFromReadModel(m, imagesByProduct, sellerMap))
-                .collect(Collectors.toList());
-
-        return PageResult.of(vos, page.total(), pageNum, pageSize);
+    public ProductReadModel getProductReadModel(String id) {
+        return productQueryRepository.findProductById(id);
     }
 
     @Transactional(readOnly = true)
     public ProductVO getProductById(String id) {
-        ProductVO cachedProduct = productCachePort.getProductCache(id);
-        if (cachedProduct != null) {
-            return cachedProduct;
+        var cachedProduct = productCachePort.getProductCache(id);
+        if (cachedProduct.isPresent()) {
+            return cachedProduct.get();
         }
 
-        Product product = productRepository.findById(ProductId.of(id))
+        var product = productRepository.findById(ProductId.of(id))
                 .orElseThrow(() -> new ProductNotFoundException(ProductId.of(id)));
-        ProductVO productVO = assembleProductVO(product);
+        var productVO = assembleProductVO(product);
 
         productCachePort.setProductCache(id, productVO);
         return productVO;
@@ -126,88 +60,139 @@ public class ProductQueryService {
         if (ids == null || ids.isEmpty()) {
             return List.of();
         }
-        List<ProductId> productIds = ids.stream().map(ProductId::of).collect(Collectors.toList());
-        List<Product> products = productRepository.findByIds(productIds);
+        var productIds = ids.stream().map(ProductId::of).toList();
+        var products = productRepository.findByIds(productIds);
         return assembleProductVOs(products);
-    }
-
-    @Transactional(readOnly = true)
-    public List<ProductVO> getProductsBySellerId(String sellerId) {
-        List<Product> products = productRepository.findBySellerId(SellerId.of(sellerId));
-        return assembleProductVOs(products);
-    }
-
-    @Transactional(readOnly = true)
-    public ProductReadModel getProductReadModel(String id) {
-        return productQueryRepository.findProductById(id);
-    }
-
-    @Transactional(readOnly = true)
-    public List<ProductReadModel> getProductReadModels(List<String> ids) {
-        return productQueryRepository.findProductsByIds(ids);
     }
 
     @Transactional(readOnly = true)
     public List<ProductVO> getSimilarProducts(String productId, Integer limit) {
-        ProductReadModel product = productQueryRepository.findProductById(productId);
+        var product = productQueryRepository.findProductById(productId);
         if (product == null || product.categoryId() == null) {
             return List.of();
         }
 
         int effectiveLimit = limit != null ? limit : 10;
-        PageResult<ProductReadModel> page = productQueryRepository.searchProducts(
+        var page = productQueryRepository.searchProducts(
                 null, product.categoryId(), null, null, null, null, null, null, 1, effectiveLimit + 1);
 
-        List<String> similarIds = page.records().stream()
+        var similarRecords = page.records().stream()
                 .filter(p -> !p.id().equals(productId))
                 .limit(effectiveLimit)
-                .map(ProductReadModel::id)
-                .collect(Collectors.toList());
-        Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct = productQueryRepository
-                .findImagesByProductIds(similarIds).stream()
-                .collect(Collectors.groupingBy(ProductQueryRepository.ProductImageInfo::productId));
+                .toList();
 
-        Set<String> sellerIds = page.records().stream()
-                .filter(p -> !p.id().equals(productId))
-                .limit(effectiveLimit)
-                .map(ProductReadModel::sellerId)
-                .filter(id -> id != null)
-                .collect(Collectors.toSet());
-        Map<String, SellerReadModel> sellerMap = sellerIds.isEmpty()
-                ? Map.of()
-                : productQueryRepository.findSellersByIds(sellerIds).stream()
-                        .collect(Collectors.toMap(SellerReadModel::id, s -> s, (a, b) -> a));
-
-        return page.records().stream()
-                .filter(p -> !p.id().equals(productId))
-                .limit(effectiveLimit)
-                .map(m -> voFromReadModel(m, imagesByProduct, sellerMap))
-                .collect(Collectors.toList());
+        return enrichRecords(similarRecords);
     }
 
+    @Transactional(readOnly = true)
+    public PageResult<ProductVO> listProducts(String keyword, String categoryId, Integer status,
+                                              BigDecimal minPrice, BigDecimal maxPrice,
+                                              Integer conditionLevel, String sort,
+                                              Boolean hasDiscount,
+                                              Integer pageNum, Integer pageSize) {
+        int effectivePageNum = pageNum != null ? pageNum : 1;
+        int effectivePageSize = pageSize != null ? pageSize : 20;
+
+        var page = productQueryRepository.searchProducts(
+                keyword, categoryId, status, minPrice, maxPrice,
+                conditionLevel, sort, hasDiscount,
+                effectivePageNum, effectivePageSize);
+
+        var vos = enrichPage(page);
+        return PageResult.of(vos, page.total(), effectivePageNum, effectivePageSize);
+    }
+
+    @Transactional(readOnly = true)
+    public PageResult<ProductVO> getMyProducts(String sellerId, Integer status, Integer pageNum, Integer pageSize) {
+        var page = productQueryRepository.findProductsBySellerId(sellerId, status, pageNum, pageSize);
+        var vos = enrichPage(page);
+        return PageResult.of(vos, page.total(), pageNum, pageSize);
+    }
+
+    // ── Shared data fetch (leaf helpers) ──
+
+    private Map<String, List<ProductImageInfo>> fetchImages(List<String> productIds) {
+        if (productIds.isEmpty()) return Map.of();
+        return productQueryRepository.findImagesByProductIds(productIds).stream()
+                .collect(Collectors.groupingBy(ProductImageInfo::productId));
+    }
+
+    private Map<String, SellerReadModel> fetchSellers(Set<String> sellerIds) {
+        if (sellerIds.isEmpty()) return Map.of();
+        return productQueryRepository.findSellersByIds(sellerIds).stream()
+                .collect(Collectors.toMap(SellerReadModel::id, s -> s, (a, _) -> a));
+    }
+
+    // ── ReadModel assembly path (for listing / similar queries) ──
+
+    private ProductVO assembleFromReadModel(ProductReadModel m,
+                                             Map<String, List<ProductImageInfo>> imagesByProduct,
+                                             Map<String, SellerReadModel> sellerMap) {
+        var seller = sellerMap.get(m.sellerId());
+        var username = seller != null
+                ? (seller.nickName() != null ? seller.nickName() : seller.username())
+                : m.username();
+        var userAvatar = seller != null ? seller.avatar() : m.userAvatar();
+
+        var images = imagesByProduct.getOrDefault(m.id(), List.of());
+        var imageUrls = images.stream().map(ProductImageInfo::imageUrl).toList();
+        var mainImageUrl = images.stream()
+                .filter(ProductImageInfo::isMain)
+                .findFirst()
+                .map(ProductImageInfo::imageUrl)
+                .orElseGet(() -> imageUrls.isEmpty() ? "" : imageUrls.getFirst());
+
+        return ProductVO.builder()
+                .id(m.id()).sellerId(m.sellerId())
+                .username(username).userAvatar(userAvatar)
+                .categoryId(m.categoryId()).categoryName(m.categoryName())
+                .title(m.title()).description(m.description())
+                .price(m.price()).originalPrice(m.originalPrice())
+                .stock(m.stock()).status(m.status()).statusDesc(m.statusDesc())
+                .views(m.views()).condition(m.condition()).conditionDesc(m.conditionDesc())
+                .location(m.location()).contactMethod(m.contactMethod())
+                .images(imageUrls).mainImageUrl(mainImageUrl)
+                .createTime(m.createTime()).updateTime(m.updateTime())
+                .build();
+    }
+
+    private List<ProductVO> enrichRecords(List<ProductReadModel> records) {
+        var productIds = records.stream().map(ProductReadModel::id).toList();
+        var imagesByProduct = fetchImages(productIds);
+        var sellerIds = records.stream()
+                .map(ProductReadModel::sellerId)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
+        var sellerMap = fetchSellers(sellerIds);
+        return records.stream()
+                .map(m -> assembleFromReadModel(m, imagesByProduct, sellerMap))
+                .toList();
+    }
+
+    private List<ProductVO> enrichPage(PageResult<ProductReadModel> page) {
+        return enrichRecords(page.records());
+    }
+
+    // ── Aggregate assembly path (for getById / getByIds) ──
+
     private ProductVO assembleProductVO(Product product) {
-        if (product == null) {
-            return null;
-        }
-        String productId = product.getId().value();
-        List<String> productIds = List.of(productId);
-        List<String> categoryIds = product.getCategoryId() != null
-                ? List.of(product.getCategoryId().value()) : List.of();
-        Set<String> sellerIds = product.getSellerId() != null
-                ? Set.of(product.getSellerId().value()) : Set.of();
+        if (product == null) return null;
+        var productId = product.getId().value();
+        var categoryIds = product.getCategoryId() != null
+                ? List.of(product.getCategoryId().value()) : List.<String>of();
+        var sellerIds = product.getSellerId() != null
+                ? Set.of(product.getSellerId().value()) : Set.<String>of();
 
         var imagesByProduct = productQueryRepository
-                .findImagesByProductIds(productIds).stream()
-                .collect(Collectors.groupingBy(ProductQueryRepository.ProductImageInfo::productId));
+                .findImagesByProductIds(List.of(productId)).stream()
+                .collect(Collectors.groupingBy(ProductImageInfo::productId));
         var categoryMap = productQueryRepository
                 .findCategoriesByIds(categoryIds).stream()
-                .collect(Collectors.toMap(ProductQueryRepository.CategoryInfo::id, c -> c, (a, b) -> a));
+                        .collect(Collectors.toMap(ProductQueryRepository.CategoryInfo::id, c -> c, (a, _) -> a));
         var detailMap = productQueryRepository
-                .findDetailsByProductIds(productIds).stream()
-                .collect(Collectors.toMap(ProductQueryRepository.ProductDetailInfo::productId, d -> d, (a, b) -> a));
-        var sellerMap = productQueryRepository
-                .findSellersByIds(sellerIds).stream()
-                .collect(Collectors.toMap(SellerReadModel::id, s -> s, (a, b) -> a));
+                .findDetailsByProductIds(List.of(productId)).stream()
+                .collect(Collectors.toMap(ProductQueryRepository.ProductDetailInfo::productId, d -> d, (a, _) -> a));
+        var sellerMap = fetchSellers(sellerIds);
 
         return readModelAssembler.toProductVO(product, imagesByProduct, categoryMap, detailMap, sellerMap);
     }
@@ -217,86 +202,29 @@ public class ProductQueryService {
             return List.of();
         }
 
-        List<String> productIds = products.stream()
-                .map(p -> p.getId().value())
-                .collect(Collectors.toList());
-        List<String> categoryIds = products.stream()
+        var productIds = products.stream().map(p -> p.getId().value()).toList();
+        var categoryIds = products.stream()
                 .filter(p -> p.getCategoryId() != null)
                 .map(p -> p.getCategoryId().value())
                 .distinct()
-                .collect(Collectors.toList());
-        Set<String> sellerIds = products.stream()
+                .toList();
+        var sellerIds = products.stream()
                 .filter(p -> p.getSellerId() != null)
                 .map(p -> p.getSellerId().value())
                 .collect(Collectors.toSet());
 
-        var imagesByProduct = productQueryRepository
-                .findImagesByProductIds(productIds).stream()
-                .collect(Collectors.groupingBy(ProductQueryRepository.ProductImageInfo::productId));
+        var imagesByProduct = fetchImages(productIds);
         var categoryMap = categoryIds.isEmpty()
                 ? Map.<String, ProductQueryRepository.CategoryInfo>of()
                 : productQueryRepository.findCategoriesByIds(categoryIds).stream()
-                        .collect(Collectors.toMap(ProductQueryRepository.CategoryInfo::id, c -> c, (a, b) -> a));
-        Map<String, ProductQueryRepository.ProductDetailInfo> detailMap = productQueryRepository
+                        .collect(Collectors.toMap(ProductQueryRepository.CategoryInfo::id, c -> c, (a, _) -> a));
+        var detailMap = productQueryRepository
                 .findDetailsByProductIds(productIds).stream()
-                .collect(Collectors.toMap(ProductQueryRepository.ProductDetailInfo::productId, d -> d, (a, b) -> a));
-        Map<String, SellerReadModel> sellerMap = sellerIds.isEmpty()
-                ? Map.of()
-                : productQueryRepository.findSellersByIds(sellerIds).stream()
-                        .collect(Collectors.toMap(SellerReadModel::id, s -> s, (a, b) -> a));
+                .collect(Collectors.toMap(ProductQueryRepository.ProductDetailInfo::productId, d -> d, (a, _) -> a));
+        var sellerMap = fetchSellers(sellerIds);
 
         return products.stream()
                 .map(product -> readModelAssembler.toProductVO(product, imagesByProduct, categoryMap, detailMap, sellerMap))
-                .collect(Collectors.toList());
-    }
-
-    private ProductVO voFromReadModel(ProductReadModel readModel,
-                                       Map<String, List<ProductQueryRepository.ProductImageInfo>> imagesByProduct,
-                                       Map<String, SellerReadModel> sellerMap) {
-        SellerReadModel seller = sellerMap.get(readModel.sellerId());
-        String username = seller != null
-                ? (seller.nickName() != null ? seller.nickName() : seller.username())
-                : readModel.username();
-        String userAvatar = seller != null ? seller.avatar() : readModel.userAvatar();
-
-        List<ProductQueryRepository.ProductImageInfo> images = imagesByProduct.getOrDefault(readModel.id(), List.of());
-        List<String> imageUrls = images.stream()
-                .map(ProductQueryRepository.ProductImageInfo::imageUrl)
-                .collect(Collectors.toList());
-        String mainImageUrl = "";
-        for (ProductQueryRepository.ProductImageInfo img : images) {
-            if (img.isMain()) {
-                mainImageUrl = img.imageUrl();
-                break;
-            }
-        }
-        if (mainImageUrl.isEmpty() && !imageUrls.isEmpty()) {
-            mainImageUrl = imageUrls.getFirst();
-        }
-        ProductReadModel enriched = new ProductReadModel(
-                readModel.id(),
-                readModel.sellerId(),
-                username,
-                userAvatar,
-                readModel.categoryId(),
-                readModel.categoryName(),
-                readModel.title(),
-                readModel.description(),
-                readModel.price(),
-                readModel.originalPrice(),
-                readModel.stock(),
-                readModel.status(),
-                readModel.statusDesc(),
-                readModel.views(),
-                readModel.condition(),
-                readModel.conditionDesc(),
-                readModel.location(),
-                readModel.contactMethod(),
-                imageUrls,
-                mainImageUrl,
-                readModel.createTime(),
-                readModel.updateTime()
-        );
-        return readModelAssembler.toProductVO(enriched);
+                .toList();
     }
 }
